--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ Jobs:
     steps: 
       - checkout
       - run: npm i
-      - run: npm run linit
+      - run: npm run lint
   test:
     docker:
       - image: circleci/node:13.8.0
